welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:32: error: not found: value True
        return True
               ^SnakeBuggle:39: error: not found: value True
        return True
               ^SnakeBuggle:41: error: type mismatch;
 found   : Unit
 required: Boolean
      gauche()
            ^